# ai_agent_club

./: .gitignore  README.md  app.py  graph.py  main.py  pyproject.toml
0407_assignment/: main.ipynb
0407_assignment/0408_assignment/: main.ipynb
0408_assignment/: main.py  pyproject.toml
0408_assignment/.ipynb_checkpoints/: main-checkpoint.ipynb
0410_assignment/: main.ipynb  main.py  pyproject.toml
0415_assignment/: .gitignore  README.md  main.py  my_goals.txt  pyproject.toml
0421_assignment/: main.py  models.py
0421_assignment/my_agents/: triage_agent.py
0422_assignment/: README.md  main.py  models.py  pyproject.toml  tools.py
0422_assignment/my_agents/: complaints_agent.py
0424_assignment/my_agents/: menu_agent.py  order_agent.py  reservation_agent.py  triage_agent.py
0429_assignment/: README.md  pyproject.toml
0429_assignment/storybook_agent/: agent.py
0429_assignment/storybook_agent/sub_agents/illustrator/: agent.py  prompt.py  tools.py
0429_assignment/storybook_agent/sub_agents/story_writer/: agent.py  prompt.py
0506_assignment/: README.md  pyproject.toml
0510_assignment/: .gitignore  README.md  pyproject.toml  study_mate.ipynb  study_mate_v2.ipynb
agents/: classification_agent.py  quiz_agent.py  researcher_agent.py  tutor_agent.py
tools/: quiz_tools.py  shared_tools.py
