[project]
name = "study-mate-multi"
version = "0.3.0"
description = "Multi-agent Education Agent with Streamlit UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.50",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "duckduckgo-search>=7.0.0",
    "ddgs>=9.0.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.40.0",
    "pydantic>=2.0.0",
]
