[project]
name = "restaurant-bot"
version = "0.1.0"
description = "Restaurant Bot with Triage, Menu, Order, Reservation agents using OpenAI Agents SDK handoff"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.2.8",
    "python-dotenv>=1.1.1",
    "streamlit>=1.48.1",
]
