[project]
name = "study-mate"
version = "0.1.0"
description = "Topic → key concepts + flashcards + quiz, built with LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.50",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
]
